# llm_discord_bot

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  TODO  config.json  example.env  pyproject.toml
src/: utils.py
src/llm_discord_bot/: __init__.py  __main__.py  bot.py  constants.py  database.py  llm.py  llmrag.py  utils.py
src/llm_discord_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/llm_discord_bot/cogs/: admin.py  admin_cog.py  dataset.py  general.py  general_cog.py  llm_cogs.py  llmrag_cog.py
